; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/extr_rk_pinctrl.c_rk3288_get_syscon.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/rockchip/extr_rk_pinctrl.c_rk3288_get_syscon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.syscon = type { i32 }
%struct.rk_pinctrl_softc = type { %struct.syscon*, %struct.syscon* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.syscon* (%struct.rk_pinctrl_softc*, i64)* @rk3288_get_syscon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.syscon* @rk3288_get_syscon(%struct.rk_pinctrl_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.syscon*, align 8
  %4 = alloca %struct.rk_pinctrl_softc*, align 8
  %5 = alloca i64, align 8
  store %struct.rk_pinctrl_softc* %0, %struct.rk_pinctrl_softc** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load %struct.rk_pinctrl_softc*, %struct.rk_pinctrl_softc** %4, align 8
  %10 = getelementptr inbounds %struct.rk_pinctrl_softc, %struct.rk_pinctrl_softc* %9, i32 0, i32 1
  %11 = load %struct.syscon*, %struct.syscon** %10, align 8
  store %struct.syscon* %11, %struct.syscon** %3, align 8
  br label %16

12:                                               ; preds = %2
  %13 = load %struct.rk_pinctrl_softc*, %struct.rk_pinctrl_softc** %4, align 8
  %14 = getelementptr inbounds %struct.rk_pinctrl_softc, %struct.rk_pinctrl_softc* %13, i32 0, i32 0
  %15 = load %struct.syscon*, %struct.syscon** %14, align 8
  store %struct.syscon* %15, %struct.syscon** %3, align 8
  br label %16

16:                                               ; preds = %12, %8
  %17 = load %struct.syscon*, %struct.syscon** %3, align 8
  ret %struct.syscon* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
